# lucebox-hub

./: CONTRIBUTING.md  README.md
dflash/: CMakeLists.txt
dflash/docs/: API.md
dflash/scripts/: bench_llm.py  prefix_cache.py  server.py  test_server.py  test_server_integration.py
dflash/src/: flashprefill.cpp  flashprefill_f16.cu  internal.h
dflash/src/common/: daemon_loop.cpp  dflash_draft_graph.cpp  gpu_runtime_compat.h  restore_delta.h  sampler.cpp  sampler.h
dflash/src/draft/: draft_dflash_graph.cpp  draft_gguf_loader.cpp  draft_graph.h
dflash/src/gemma4/: gemma4_backend.cpp  gemma4_dflash_target.cpp  gemma4_graph.cpp
dflash/src/qwen3/: qwen3_backend.cpp  qwen3_drafter.cpp  qwen3_drafter.h
dflash/src/qwen35/: qwen35_backend.cpp  qwen35_backend.h  qwen35_dflash_target.cpp  qwen35_target_graph.cpp
dflash/src/server/: http_server.cpp  sse_emitter.cpp
dflash/test/: test_mtp_converter.sh  test_mtp_e2e.sh  test_restore_delta.cpp  test_server_unit.cpp
harness/: .gitignore  README.md  client_test_runner.py
harness/benchmarks/: README.md  generation_benchmark.py  run_lucebox_vs_llamacpp.sh
harness/benchmarks/prompts/: bench_agent.jsonl  bench_gsm.jsonl  bench_he.jsonl  bench_math.jsonl  generation_smoke.jsonl
harness/clients/: README.md  common.sh  llamacpp_compat_proxy.py  run_backend_pair.sh  run_claude_code.sh  run_claude_llamacpp_decode_check.sh  run_claude_llamacpp_matrix.sh  run_codex.sh  run_hermes.sh  run_openclaw.sh  run_opencode.sh  run_openwebui.sh  run_openwebui_tools.sh  run_pi.sh  summarize_backend_pair.py
harness/clients/prompts/: decode_check.txt  repo_inspection.txt
megakernel/: README_PASCAL.md  kernel.cu  prefill.cu  setup.py
